changing cycles material from current to glass in materials editor causes blender to close #38075

Closed
opened 2014-01-05 11:56:03 +01:00 by Gabi Shaar · 12 comments

System Information
Linux ubuntu 13.10
Intel(R) Core(TM) i7-4770K CPU @ 3.50GHz
GeForce GTX 770

Blender Version
Broken: build hash : 074eac date: 2014-01-04 15:50 (64bit)
Worked: 2.69.0

Short description of error
Changing cycles material from current to glass in materials editor causes blender to close. Same file opened in the above 2 versions. File originally saved with broken version.
Opening the same file in 2.69.0 and attempting the change is successful.

Apologies for the file size, could not reproduce from scratch.

Exact steps for others to reproduce the error

  1. Open attached blend file.cube_art.blend in broken version
  2. In the material visible upon opening the file, change the shared to "Glass BSDF"
  3. Blender closes.
**System Information** Linux ubuntu 13.10 Intel(R) Core(TM) i7-4770K CPU @ 3.50GHz GeForce GTX 770 **Blender Version** Broken: build hash : 074eac date: 2014-01-04 15:50 (64bit) Worked: 2.69.0 **Short description of error** Changing cycles material from current to glass in materials editor causes blender to close. Same file opened in the above 2 versions. File originally saved with broken version. Opening the same file in 2.69.0 and attempting the change is successful. Apologies for the file size, could not reproduce from scratch. **Exact steps for others to reproduce the error** 1. Open attached blend file.[cube_art.blend](https://archive.blender.org/developer/F62226/cube_art.blend) in broken version 2. In the material visible upon opening the file, change the shared to "Glass BSDF" 3. Blender closes.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @jellofishi

Added subscriber: @jellofishi

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Confirmed crash, change Glossy to Glass shader. (Windows 7 x64).

Confirmed crash, change Glossy to Glass shader. (Windows 7 x64).
Author

Narrowed down the bug to commit 4d4222b761

Narrowed down the bug to commit 4d4222b7619de408ce0be3af667ed8cfdf729ebe

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne

Lukas, any idea why the PROP_NONE -> PROP_FACTOR change could cause a crash here?

Lukas, any idea why the PROP_NONE -> PROP_FACTOR change could cause a crash here?
Author

Exact crash occurs in rna_nodetree.c::rna_NodeSocketStandard_float_range when attempting to access dval->min while dval points to null.
cube_art.crash.txt

Exact crash occurs in rna_nodetree.c::rna_NodeSocketStandard_float_range when attempting to access dval->min while dval points to null. [cube_art.crash.txt](https://archive.blender.org/developer/F63080/cube_art.crash.txt)

This issue was referenced by blender/blender-addons-contrib@ebf23b5144

This issue was referenced by blender/blender-addons-contrib@ebf23b51448e4bc9c67d656093ecc01be882c9d3

This issue was referenced by ebf23b5144

This issue was referenced by ebf23b51448e4bc9c67d656093ecc01be882c9d3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit ebf23b5144.

Closed by commit ebf23b5144.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38075
No description provided.